<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow_500">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/txt_syarat_imb"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"
        android:fontFamily="@font/allerbd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="14dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_imb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/txt_one"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_permohonan"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_surat_kuasa"
                android:layout_below="@id/ll_imb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/txt_two"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_scan_ktp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_jaminan_konstruksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_surat_kuasa"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/txt_three"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_scan_pbb"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_penanaman_pohon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_jaminan_konstruksi"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="@string/txt_four"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_bukti_penguasaan"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_surat_kuasa_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_penanaman_pohon"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="5"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:id="@+id/tv_syarat_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_perhitungan_struktur"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_jaminan_pemilik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_surat_kuasa_2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="6"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:id="@+id/tv_syarat_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_kajian_lingkungan"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_andalalin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_jaminan_pemilik"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="7"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_andalalin"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/ll_andalalin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="8"
                    android:fontFamily="@font/allerrg"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/bg_rounded_yellow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerrg"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:text="@string/txt_gambar_bangunan_teknis"/>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>