<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_500"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_text"/>

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="10dp"
            android:textColor="@color/yellow_700"
            android:fontFamily="@font/allerbd"
            android:textAllCaps="false"
            android:text="@string/masuk"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_daftar"
            android:layout_marginHorizontal="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/yellow_700"
            android:fontFamily="@font/allerbd"
            android:textAllCaps="false"
            android:text="@string/daftar"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>