<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_aplikasi"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/allerbd"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_notifications"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_container"
        app:layout_constraintEnd_toEndOf="parent">
        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="right"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="5"
            app:sliderStartAutoCycle="true" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_container"
        android:background="@color/yellow_500"
        android:fontFamily="@font/allerrg"
        android:textColor="@color/white"
        android:text="@string/txt_info_syarat_imb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_pengajuan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/allerrg"
        app:layout_constraintTop_toBottomOf="@id/bt_info"
        android:text="@string/txt_pengajuan_imb"
        android:textColor="@color/white"
        android:background="@color/yellow_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/allerrg"
        android:text="@string/txt_contoh_formulir"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/bt_pengajuan"
        android:background="@color/yellow_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_masuk_keluar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/allerrg"
        android:text="Masuk"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/bt_download"
        android:background="@color/yellow_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>